--- a/style/base.css
+++ b/style/base.css
@@ -21,6 +21,7 @@ header{
 	background-color: #2d2d2d;
 	top: 0;
 	position: sticky;
+	box-shadow: 2px 2px 20px 1px #2d2d2d;
 }
 
 div#title-container h1{
@@ -93,4 +94,45 @@ nav a{
 
 #snarky-comment{
 	font-size: 10px;
+}
+
+.card{
+	width: 100%;
+	box-shadow: 2px 2px 20px 1px #2d2d2d;
+	padding: 10px;
+	margin: 10px;
+}
+
+.share h2{
+	float: left;
+	font-size: 26px;
+	font-weight: lighter;
+}
+
+hr.postshare{
+	clear: both;
+}
+
+.share a{
+	float: right;
+	text-decoration: none;
+	color: #f9f9f9;
+	background-color: #2196f3;
+	padding: 5px;
+	border-radius: 5px;
+	box-shadow: 2px 2px 10px 1px #2d2d2d;
+	margin-bottom: 10px;
+}
+
+.share a:hover{
+	position: relative;
+	top: -1px;
+	box-shadow: 2px 2px 6px 1px #2d2d2d;	
+}
+
+.anchor{
+	display: inline-block;
+	position: relative;
+	top: -200px;
+	visibility: hidden;
 }
