wrote homepage, improved external link marking

--- a/resources/components/header.html
+++ b/resources/components/header.html
@@ -8,8 +8,8 @@
 	<nav>
 		<ul>
 			<a href="/blag" title="I might have opinions"><li class="menu"><span class="fa">&#xf1ea;</span> blog</li></a>
-			<a href="https://github.com/martyschaer" title="see my code"><li class="menu"><span class="fa">&#xf092;</span> github<span class="le">&#xf08e;</span></li></a>
-			<a href="mailto:contact@mariusschaer.ch" title="write me an email"><li class="menu"><span class="fa">&#xf0e0;</span> email<span class="le">&#xf08e;</span></li></a>
+			<a href="https://github.com/martyschaer" title="see my code"><li class="menu ext"><span class="fa">&#xf092;</span> github</li></a>
+			<a href="mailto:contact@mariusschaer.ch" title="write me an email"><li class="menu ext"><span class="fa">&#xf0e0;</span> email</li></a>
 			<a href="/contact" title="more contact information"><li class="menu"><span class="fa">&#xf2bb;</span> contact</li></a>
 		</ul>
 	</nav>
