added about me card

--- a/style/base.css
+++ b/style/base.css
@@ -15,8 +15,8 @@ a{
 	font-family: 'FontAwesome';
 	font-size: 8px;
 	vertical-align: super;
-	margin-left: 5px;
-	content: "\f08e"
+	margin-left: 2px;
+	content: "\f08e";
 }
 
 .fa{
