--- a/style/base.css
+++ b/style/base.css
@@ -205,3 +205,12 @@ div.error h2{
 	text-align: center;
 	font-size: 20px;
 }
+
+div#didYouMean{
+	display: none;
+	border: 2px solid #f44336;
+}
+
+div#didYouMean li:before{
+	content: "\f1ea";
+}
